<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VirtualCIT</string>
    <string name="action_settings">Settings</string>
    <string name="timetable_btn_text">View Timetable</string>
    <string name="timetable_dialog_msg">Loading Timetable</string>
    <string name="timetable_bundle_key">ctimetable</string>
    <string name="no_time_table_classes">No Classes</string>

    <string name="title_activity_society_timetable">SocietyTimetable</string>
    <string name="time">Time</string>
    <string name="society">Society</string>
    <string name="title_activity_activity_details">ActivityDetails</string>
    <string name="start_time">Start :</string>
    <string name="end_time">End :</string>
    <string name="location">Location :</string>
    <string name="descpt">Description :</string>
    <string name="fees">Fees :</string>
    <string name="title_activity_indoor_maps">IndoorMaps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student_services">Student Services</string>
    <string name="timetable_activity">timetable_activity</string>
    <string name="timetable_selection">Timetable Selection</string>
    <string name="twitter_main">Twitter</string>
    <string name="facebook_main">Facebook</string>
    <string name="society_timetable">Society Timetable</string>
    <string name="society_activity_details">Activity Details</string>
    <string name="indoor_maps">Indoor Maps</string>
    <string name="student_handbooks">Student Handbook</string>
    <string name="college_tour_name">College Tour</string>
    <string name="college_name">UCD</string>

    <!-- Main LIst items -->
    <string-array name="main_items">
        <item>Student Services</item>
        <item>Student Handbooks</item>
        <item>Timetable</item>
        <item>College Tour</item>
        <item>Indoor Maps</item>
        <item>Society Timetable</item>
        <item>Facebook</item>
        <item>Twitter</item>
    </string-array>

    <string-array name="student_services_items">
        <item>Accommodation</item>
        <item>Sport</item>
        <item>Students’ Union</item>
        <item>Chaplaincy</item>
        <item>Medical Centre</item>
        <item>Academic Learning Centre</item>
    </string-array>

</resources>
