<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="societyTimetable.ActivityDetails">

    <TextView
        android:id="@+id/title_of_activity"

        android:textSize="@dimen/heading_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/table_text_title"
       />

    <TextView
        android:id="@+id/start_label"
        android:text="@string/start_time"
        android:layout_below="@+id/title_of_activity"
        android:textSize="@dimen/table_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"/>
    <TextView
        android:id="@+id/start_time_text"
        android:layout_below="@+id/title_of_activity"
        android:layout_toRightOf="@+id/start_label"
        android:textSize="@dimen/table_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/end_label"
        android:text="@string/end_time"
        android:layout_below="@+id/start_label"
        android:textSize="@dimen/table_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"/>
    <TextView
        android:id="@+id/end_time_text"
        android:layout_below="@+id/start_time_text"
        android:layout_toRightOf="@+id/end_label"
        android:textSize="@dimen/table_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/location_label"
        android:text="@string/location"
        android:layout_below="@+id/end_label"
        android:textSize="@dimen/table_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/table_text_title"
        android:textAllCaps="true"/>
    <TextView
        android:id="@+id/location_text"
        android:layout_below="@+id/end_time_text"
        android:layout_toRightOf="@+id/location_label"
        android:textSize="@dimen/table_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/description_label"
        android:text="@string/descpt"
        android:layout_below="@+id/location_label"
        android:textSize="@dimen/table_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"/>
    <TextView
        android:id="@+id/description_text"
        android:layout_below="@+id/description_label"
        android:textSize="@dimen/table_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/table_text_title"/>

    <TextView
        android:id="@+id/fee_label"
        android:text="@string/fees"
        android:layout_below="@+id/description_text"
        android:textSize="@dimen/table_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/table_text_title"
        android:textAllCaps="true"/>
    <TextView
        android:id="@+id/fee_text"
        android:layout_below="@+id/description_text"
        android:layout_toRightOf="@+id/fee_label"
        android:textSize="@dimen/table_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>
